<?xml version="1.0"?>
<package>
  <name>demo_lidar</name>
  <version>0.9.1</version>

  <description>
    Depth Enhanced Monocular Odometry (camera and lidar version)
  </description>

  <maintainer email="xxx@gmail.com">Ji Zhang</maintainer>

  <license>LGPL</license>

  <author>Ji Zhang</author>

  <url>http://wiki.ros.org/demo_lidar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>

